# chrono-photo

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
cmd_examples/: fade.bat  full-16.bat  full.bat  full.chrono  minimal.bat  shake.bat  simple-example.bat  simple.bat  test.bat  video.bat
cmd_examples_dev/: fade.bat  minimal.chrono  shake.chrono
docs/: .gitignore  MemoryCalculations.xlsx  OutlierAlgorithm.xlsx  gallery.md  options.md  tutorial_photos.md  tutorial_prepare.md  tutorial_recording.md  tutorial_videos.md
src/: chrono.rs  cli.rs  color.rs  flist.rs  img_stream.rs  imgstream.rs  lib.rs  main.rs  options.rs  shake.rs  simple.rs  slicer.rs  streams.rs  time_slice.rs
src/util/: create_example_data.rs
