[package]
name = "chrono-photo"
version = "0.6.5"
authors = ["m-lange <martin_lange_@gmx.net>"]
edition = "2018"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false

[[bin]]
name = "chrono-photo"
path = "src/main.rs"

[[bin]]
name = "create-test-data"
path = "src/util/create_example_data.rs"

[dependencies]
image = "0.23"
rand = "0.5.5"
num-traits = "0.2.11"
glob = "0.3"
flate2 = "1.0"
bstr = "0.2.12"
byteorder = "1.3.4"
indicatif = "0.14.0"
rayon = "1.3.0"
dont_disappear = "3.0.1"
path-absolutize = "1.0.2"
# rawloader = "0.36.2"
structopt = {version = "0.3", features = ["wrap_help"]} # TODO put CLI in feature
